# rescript

./: .gitattributes  .gitignore  .ocamlformat-ignore  0-AI-MANIFEST.a2ml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Example.res  Justfile  LICENSE  LICENSE.MIT  LLM_INDEX.md  LSP.md  Makefile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  RALPH_PROMPT.md  RALPH_SETUP.md  RALPH_TODO.md  README.adoc  README.md  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  analysis.opam  biome.json  codecov.yml  context7.json  debug_compiler_hang.md  dune  dune-project  example.res  flake.nix  guix.scm  issue.txt  llm-warmup-dev.md  (+18 more)
compiler-rust/: BINARY_AST_MASTER_PLAN.md  BINARY_AST_PARITY_COMPREHENSIVE_PLAN.md  BINARY_AST_PARITY_PLAN.md  BINARY_AST_PLAN.md  COMPTIME.md  Cargo.toml  GLOBAL_STATE_AUDIT.md  PARSER_PARITY_PLAN.md  PLAN.md  PLAN_FORMATTER.md  PRINTER_PLAN.md  PROGRESS.md  TASK_PARSER_FEATURES.md  TASK_PARSE_ERRORS.md  TASK_PARSE_ERRORS_PROGRESS.md  TASK_PRINTER_ROUNDTRIP.md
compiler-rust/src/: arena.rs  cache.rs  config.rs  context.rs  diagnostics.rs  driver.rs  ffi.rs  ident.rs  intern.rs  lib.rs  location.rs  parse_arena.rs
compiler-rust/src/binary_ast/: current_marshal.rs  deps.rs  mapper_from0.rs  mapper_to0.rs  marshal.rs  mod.rs  parsetree0.rs  parsetree0_marshal.rs  serialize.rs  types.rs  writer.rs
compiler-rust/src/js_ir/: mod.rs  op.rs  printer.rs
compiler-rust/src/lambda/: analysis.rs  arity.rs  beta_reduce.rs  closure.rs  compat.rs  compile.rs  compile_context.rs  constant.rs  convert.rs  free_variables.rs  mod.rs  primitive.rs  print.rs  sexp_lambda.rs  subst.rs  tag_info.rs
compiler-rust/src/parser/: ast.rs  benchmark.rs  code_frame.rs  comment.rs  comment_table.rs  core.rs  diagnostics.rs  doc.rs  expr.rs  format.rs  formatter.rs  grammar.rs  jsx_ppx.rs  longident.rs  ml_printer.rs  mod.rs  module.rs  parens.rs  parsetree_viewer.rs  pattern.rs  printer.rs  printer2.rs  scanner.rs  sexp.rs  sexp_locs.rs  sexp_locs0.rs  state.rs  token.rs  typ.rs  utf8.rs
compiler-rust/src/types/: asttypes.rs  btype.rs  context.rs  ctype.rs  decl.rs  env.rs  includemod.rs  mod.rs  path.rs  sexp_typedtree.rs  type_expr.rs  typecore.rs  typedtree.rs  typemod.rs  variance.rs
compiler/core/: cmd_ppx_apply.ml  dune  embed_rewrite.ml  j.ml  js_analyzer.ml  js_block_runtime.ml  js_call_info.ml  js_call_info.mli  js_cmj_format.ml  js_cmj_format.mli  js_dump.ml  js_dump_lit.ml  js_dump_program.ml  js_exp_make.ml  js_exp_make.mli  js_fold.ml  js_implementation.ml  js_name_of_module_id.ml  js_of_lam_block.ml  js_of_lam_option.ml  js_of_lam_option.mli  js_of_lam_variant.ml  js_packages_info.ml  js_packages_info.mli  js_pass_external_shadow.ml  js_pass_flatten.ml  js_pass_flatten_and_mark_dead.ml  js_pass_nested_component_exports.ml  js_pass_nested_component_exports.mli  js_pass_record_rest.ml  js_pass_scope.ml  js_pass_tailcall_inline.ml  js_record_fold.ml  js_record_iter.ml  js_record_map.ml  js_source_map.ml  js_source_map.mli  js_stmt_make.ml  js_stmt_make.mli  jsx_help.ml  (+61 more)
compiler/ext/: bsc_warnings.ml  config.ml  config.mli  dune  ext_embed.ml  ext_embed.mli  ext_filename.ml  ext_filename.mli  ext_module_system.ml  ext_modulename.ml  ext_modulename.mli  ext_path.ml  ext_path.mli  ext_pp.ml  ext_pp.mli  ident.ml  ident.mli  js_reserved_map.ml  js_reserved_map.mli  literals.ml  misc.ml  misc.mli  primitive_modules.ml  runtime_package.ml  runtime_package.mli  warnings.ml  warnings.mli
rewatch/: AGENTS.md  Cargo.toml  CompilerConfigurationSpec.md  EXPERIMENT_DAEMON.md  Features.md  build.rs  postinstall.js  rewatch_overview.tex
rewatch/otel-viewer/: .gitignore  AGENTS.md  README.md  db.py  pyproject.toml  server.py
rewatch/otel-viewer/static/: api.js  app.js  export.js  span-tree.js  state.js  trace-list.js  utils.js
rewatch/otel-viewer/templates/: index.html
rewatch/proto/: rescript.proto
rewatch/src/: build.rs  build_metadata.rs  build_state.rs  cli.rs  client.rs  cmd.rs  config.rs  daemon.rs  format.rs  format_cmd.rs  helpers.rs  lib.rs  llm_index.rs  lock.rs  lsp.rs  main.rs  mcp.rs  project_context.rs  queue.rs  sourcedirs.rs  telemetry.rs  watcher.rs
rewatch/src/client/: build.rs  clean.rs  compiler_args.rs  connection.rs  debug.rs  format.rs  output.rs  watch.rs
rewatch/src/daemon/: clients.rs  file_change_handler.rs  reporters.rs  service.rs  state.rs  telemetry.rs  work_queue.rs
rewatch/src/helpers/: package_resolution.rs
rewatch/src/lsp/: AGENTS.md  analysis.rs  build_queue.rs  code_action.rs  code_lens.rs  completion.rs  definition.rs  dependency_closure.rs  diagnostic_store.rs  did_change.rs  did_save.rs  document_symbol.rs  file_args.rs  formatting.rs  hover.rs  http.rs  initial_build.rs  initialize.rs  inlay_hint.rs  lsp-skill-gaps.md  notifications.rs  queue.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  type_definition.rs  typecheck.rs  workspace_symbol.rs
rewatch/src/schema/: embeds.rs
rewatch/testrepo/: bsconfig.json  package.json  rescript.json
rewatch/tests/: .gitignore  clean.sh  compile-one.sh  compile.sh  embeds-cache.sh  embeds-cleanup.sh  embeds-compiler.sh  embeds-config.sh  embeds-diags-compiler-log.sh  embeds-diags.sh  embeds-nested-compiler.sh  embeds.sh  experimental.sh  format.sh  get_bin_paths.js  legacy.sh  lock.sh  mcp.sh  schema-embeds.sh  suffix.sh  suite-ci.sh  suite.sh  utils.sh  watch.sh
rewatch/tests/_tmp_schema/: embedlang.input.schema.json  embedlang.openapi.json  embedlang.output.schema.json
rewatch/tests/compile/: 01-basic-compile.sh  10-duplicate-module-name.sh  17-prod-flag.sh  18-external-dep-uncurried-dot.sh  19-utf8-warning.sh
rewatch/tests/experimental/: 02-experimental-features-parse-error.sh  03-watch-invalid-experimental.sh
rewatch/tests/features/: 01-features-default-all-active.sh  02-features-cli-restricts-to-one.sh  03-features-transitive-expansion.sh  04-features-toggle-cleans-artifacts.sh  05-features-cycle-errors.sh  06-features-empty-flag-rejected.sh
rewatch/tests/lock/: 01-lock-when-watching.sh
(+3726 files in other folders)
