[package]
name = "rescript-compiler"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ReScript compiler - Rust implementation"
license = "LGPL-3.0"
repository = "https://github.com/rescript-lang/rescript"

[lib]
name = "rescript_compiler"
path = "src/lib.rs"

# Parser CLI for testing (matches OCaml res_parser interface)
[[bin]]
name = "res_parser_rust"
path = "src/bin/res_parser.rs"

[[bin]]
name = "bsc"
path = "src/bin/bsc.rs"

[dependencies]
# Serialization (for FFI and config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
rayon = "1.10"
dashmap = "6.0"

# Data structures
typed-arena = "2.0"
ahash = "0.8"
indexmap = { version = "2.0", features = ["serde"] }
smol_str = { version = "0.3", features = ["serde"] }

# Utilities
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# FFI (for transition period)
# ocaml = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.40", features = ["json"] }

[features]
default = []
# ffi = ["ocaml"]  # Enable OCaml FFI for transition period

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true

# Benchmarks will be added later
# [[bench]]
# name = "parser_bench"
# harness = false
#
# [[bench]]
# name = "compile_bench"
# harness = false
