[package]
name = "rescript"
version = "13.0.0-alpha.2"
edition = "2024"
rust-version = "1.91"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.93"
async-stream = "0.3"
blake3 = "1.3.3"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
console = "0.15.5"
convert_case = "0.6.0"
futures = "0.3.25"
futures-timer = "3.0.2"
indicatif = "0.17.3"
log = { version = "0.4.17" }
notify = { version = "5.1.0", features = ["serde"] }
prost = "0.13"
rayon = "1.6.1"
num_cpus = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
serde_ignored = "0.1.11"
serde_path_to_error = "0.1.16"
sysinfo = "0.29.10"
tempfile = "3.10.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }

ratatui = "0.29"
crossterm = "0.28"
scopeguard = "1.2"

# OpenTelemetry tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.25"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "http-proto", "reqwest-client"] }

[build-dependencies]
tonic-build = "0.12"


[profile.release]
codegen-units = 1
lto = true
