(library
 (name core)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard -w +a-4-9-27-30-40-41-42-48-70))
 (libraries depends ext flow_parser frontend gentype))

(rule
 (target js_name_of_module_id.ml)
 (deps js_name_of_module_id.cppo.ml)
 (action
  (run %{bin:cppo} %{env:CPPO_FLAGS=} %{deps} -o %{target})))

(rule
 (target js_pass_debug.ml)
 (deps js_pass_debug.cppo.ml)
 (action
  (run %{bin:cppo} %{env:CPPO_FLAGS=} %{deps} -o %{target})))

(rule
 (target lam_compile_main.ml)
 (deps lam_compile_main.cppo.ml)
 (action
  (run %{bin:cppo} %{env:CPPO_FLAGS=} %{deps} -o %{target})))

(rule
 (target lam_util.ml)
 (deps lam_util.cppo.ml)
 (action
  (run %{bin:cppo} %{env:CPPO_FLAGS=} %{deps} -o %{target})))
